# Snake_Skillbox

./: CMakeLists.txt  deploy.bat
src/: main.cpp  snake_game.cpp  snake_game.h  snake_menu.cpp  snake_menu.h
